Makefile dynamic libs, fix: faulty delete

--- a/examples/CExample/Makefile
+++ b/examples/CExample/Makefile
@@ -1,20 +1,29 @@
 CC = gcc
 CFLAGS = -O2
 BONMIN_INLUDE_DIR = /home/shaurya/Development/Bonmin-1.8/release/include/coin
-INCLUDES = -I$(BONMIN_INLUDE_DIR)
-EXE = main
-CFLAGS += $(INCLUDES)
 DEBUG_LIB_DIR = /home/shaurya/Development/Bonmin-1.8/debug/lib
 RELEASE_LIB_DIR = /home/shaurya/Development/Bonmin-1.8/release/lib
+EXE = main
+
+INCLUDES = -I$(BONMIN_INLUDE_DIR)
+CFLAGS += $(INCLUDES)
+CFLAGS += -L$(RELEASE_LIB_DIR)
+CFLAGS += -Wl,-rpath=$(RELEASE_LIB_DIR)
 DEBUG_LIBS = $(wildcard $(DEBUG_LIB_DIR)/*.a)
+LIBS = -lbonminampl -lbonmin -lCbc -lCbcSolver -lCgl -lClp -lClpSolver -lcoinasl -lcoinblas -lcoinlapack -lcoinmumps -lCoinUtils -lOsiCbc -lOsiClp -lOsiCommonTests -lOsi
+LIBS += -lipopt -llapack -ldl -lcoinhsl -lblas -lgfortran -lm -lquadmath -lstdc++ -lz
 
 all : MyBonmin.o main
 
 MyBonmin.o : MyBonmin.c
 	$(CC) -c $(CFLAGS) -o MyBonmin.o MyBonmin.c
 
+# main : main.c MyBonmin.o
+# 	$(CC) $(CFLAGS) -o main main.c MyBonmin.o $(DEBUG_LIBS) $(LIBS)
+
+
 main : main.c MyBonmin.o
-	$(CC) $(CFLAGS) -o main main.c MyBonmin.o $(DEBUG_LIBS) -lipopt -llapack -ldl -lcoinhsl -lblas -lgfortran -lm -lquadmath -lstdc++ -lz
+	$(CC) $(CFLAGS) -o main main.c MyBonmin.o $(LIBS)
 
 clean :
 	rm -f $(EXE) MyBonmin.o
